seccion de habilidades, y terminacion de presentacion

--- a/secciones/aboutme.html
+++ b/secciones/aboutme.html
@@ -1,9 +1,20 @@
-<img class="imagenAboutme" src="imagenes/fondoAboutme.webp" alt="">
-
-<div class="title-presentation">
-    <p>Hi, Im Luciano. <br> Welcome to my Portfolio</p>
+<div class="title-presentation col-m-8 col-l-8 col-xl-8">
+    <p>Hi, im LUCIANO <br> WELCOME to my portfolio</p>
 </div>
 
-<div class="presentation">
-    <p>ahdaiohfohfooaosoidaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+<div class="photo-computer col-m-4 col-l-4 col-xl-4 col-s-12 col-xs-12">
+    <img src="/imagenes/computadora.png" alt="">
+</div>
+
+
+
+<div id="presentation" class="presentation col-l-12 col-xl-12">
+    <div class="etiqueta col-xl-10 col-l-10 col-m-10 col-s-10 col-xs-10 ">
+
+        <p class="col-xl-8 col-l-8 col-m-8  col-s-12 col-xs-12" >I'm 21 and Since I was a child liked technology, learned about programming through my parents, and I started a Java
+            FullStack developer course. When I learned HTML and CSS, decided to go deeper by complementing it with
+            JavaScript</p>
+        <img class="col-l-4 col-l-4 col-m-4 col-s-12 col-xs-12"   src="/imagenes/foto-perfil.jpeg" alt="">
+
+    </div>
 </div>
