--- a/secciones/navbar.html
+++ b/secciones/navbar.html
@@ -5,10 +5,10 @@
 
 <div class="index col-xs-8 col-s-8 col-m-8 col-l-8 col-xl-8">
     <ul>
-        <a  href="#">ABOUT ME</a>
-        <a  href="#">SKILLS</a>
-        <a  href="#">PROJECTS</a>
-        <a  href="#">CONTACT ME</a>
+        <a  href="#presentation">ABOUT ME</a>
+        <a  href="#skills">SKILLS</a>
+        <a  href="#projects">PROJECTS</a>
+        <a  href="#contact">CONTACT ME</a>
     </ul>
 </div>
 
