correccion de url de imagenes y fuentes

--- a/secciones/aboutme.html
+++ b/secciones/aboutme.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="photo-computer col-m-4 col-l-4 col-xl-4 col-s-12 col-xs-12">
-    <img src="/imagenes/computadora.png" alt="">
+    <img src="imagenes/computadora.png" alt="">
 </div>
 
 
@@ -14,7 +14,7 @@
         <p class="col-xl-8 col-l-8 col-m-8  col-s-12 col-xs-12" >I'm 21 and Since I was a child liked technology, learned about programming through my parents, and I started a Java
             FullStack developer course. When I learned HTML and CSS, decided to go deeper by complementing it with
             JavaScript</p>
-        <img class="col-l-4 col-l-4 col-m-4 col-s-12 col-xs-12"   src="/imagenes/foto-perfil.jpeg" alt="">
+        <img class="col-l-4 col-l-4 col-m-4 col-s-12 col-xs-12"   src="imagenes/foto-perfil.jpeg" alt="">
 
     </div>
 </div>
