cambio de fuentes por linkeo online y correccion de vista de >1200px

--- a/secciones/skills.html
+++ b/secciones/skills.html
@@ -1,4 +1,4 @@
-<div class="prueba2 col-xl-12 col-l-12 col-m-12 col-s-12 col-xs-12">
+<div class="skills-fondo col-xl-12 col-l-12 col-m-12 col-s-12 col-xs-12">
 
     <section class="skills-container col-xl-10 col-l-10 col-m-10 col-s-10 col-xs-10">
         <p>HABILITIES</p>
