se agrega seccion de proyectos y correccion de pequeños errores

--- a/secciones/navbar.html
+++ b/secciones/navbar.html
@@ -6,7 +6,7 @@
 <div class="index col-xs-8 col-s-8 col-m-8 col-l-8 col-xl-8">
     <ul>
         <a  href="#presentation">ABOUT ME</a>
-        <a  href="#skills">SKILLS</a>
+        <a  href="#skills">HABILITIES</a>
         <a  href="#projects">PROJECTS</a>
         <a  href="#contact">CONTACT ME</a>
     </ul>
