--- a/secciones/projects.html
+++ b/secciones/projects.html
@@ -1,1 +1,54 @@
-adadad
+<div class="projects-conteiner">
+
+    <div class="projects-etiqueta col-xl-10 col-l-10 col-m-10 col-s-10 col-xs-10">
+        <p>PROJETCS</p>
+        <ul class="projects-grid">
+
+            <div id="projects-model" class="projects-model col-xl-4 col-l-4 col-m-4 col-s-6 col-xs-12">
+                <h1>VIOLET</h1>
+                <img src="imagenes/projects-violet.png" alt="preview-project">
+                <div class="projects-tecnologias">
+                    <p class="css">CSS</p>
+                    <p class="html">HTML</p>
+                </div>
+                <p>Responsive website simulating women's clothing ecommerce, it is a static page</p>
+                <div class="projects-links">
+                    <a href="https://luchoromero29.github.io/Violet-responsive-web/">DEPLOY</a>
+                    <a href="https://github.com/Luchoromero29/Violet-responsive-web">GITHUB</a>
+                </div>
+            </div>
+
+            <div id="projects-model" class="projects-model col-xl-4 col-l-4 col-m-4 col-s-6 col-xs-12">
+                <h1>Calculator</h1>
+                <img src="imagenes/projects-calculator.png" alt="preview-project">
+                <div class="projects-tecnologias">
+                    <p class="javascript">JavaScript</p>
+                    <p class="css">CSS</p>
+                    <p class="html">HTML</p>
+                </div>
+                <p>It was an interesting challenge, I thought it was going to be more difficult than it was, but I was able to solve all the problems and considerations </p>
+                <div class="projects-links">
+                    <a href="https://luchoromero29.github.io/Calculadora-Js/">DEPLOY</a>
+                    <a href="https://github.com/Luchoromero29/Calculadora-Js">GITHUB</a>
+                </div>
+            </div>
+
+            <div id="projects-model" class="projects-model col-xl-4 col-l-4 col-m-4 col-s-6 col-xs-12">
+                <h1>Memotest</h1>
+                <img src="imagenes/projects-memotest.png" alt="preview-project">
+                <div class="projects-tecnologias">
+                    <p class="javascript">JavaScript</p>
+                    <p class="css">CSS</p>
+                    <p class="html">HTML</p>
+                </div>
+                <p>Memory game with timer and correct answers, the first and oldest project on this list of projects</p>
+                <div class="projects-links">
+                    <a href="https://luchoromero29.github.io/Memotest.-/">DEPLOY </a>
+                    <a href="https://github.com/Luchoromero29/Memotest.-">GITHUB </a>
+                </div>
+            </div>
+
+        </ul>
+    </div>
+
+</div>
