--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div include-html="secciones/skills.html"></div>
             </div>
 
-            <div  id="projects" class="projects col-xs-12 col-s-12 col-m-12 col-l-12 col-x-12" style="background-color: green;">
+            <div  id="projects" class="projects col-xs-12 col-s-12 col-m-12 col-l-12 col-x-12" >
                 <div class="includes" include-html="secciones/projects.html"></div>
             </div>
 
