correccion del link del icon

--- a/secciones/skills.html
+++ b/secciones/skills.html
@@ -68,7 +68,7 @@
             </div>
             <div class="skill-icon">
                 <div class="padding-img autocad">
-                    <img src="/icons/autocad.png" alt="icon autocad">
+                    <img src="icons/autocad.png" alt="icon autocad">
                 </div>
                 <span>Autocad</span>
             </div>
