seccion de contacto agregada, correccion de colores

--- a/secciones/contact.html
+++ b/secciones/contact.html
@@ -1,1 +1,48 @@
-adadad
+<div class="contact-container">
+    <div class="contact-etiqueta col-xl-10 col-l-10 col-m-10 col-s-10 col-xs-10">
+
+        <div class="contact-info col-xl-5 col-l-5 col-m-6 col-s-6 col-xs-12">
+            <div class="contact-info-text">
+                <h1>Sigamos en contacto</h1>
+                <p>La colaboracion y la conexion son fundamentales en este mundo digital. Tambien podes seguirme en mis
+                    redes sociales para estar al tanto de las ultimas novedades y proyectos</p>
+            </div>
+            <div class="contact-redes">
+                <a href="">
+                    <img src="icons/linkedin.png" alt="icon linkedin">
+                </a>
+                <a href="">
+                    <img src="icons/github.png" alt="icon github">
+                </a>
+                <a href="">
+                    <img src="/icons/instagram.png" alt="icon instagram">
+                </a>
+                <a id="download" class="contact-download" href="pdf/CV LUCIANO 2023.pdf" download="CV Luciano Romero">
+                    Download CV
+                </a>
+            </div>
+        </div>
+        <div class="contact-form col-xl-5 col-l-5 col-m-6 col-s-6 col-xs-12">
+
+            <form class="contact-formulario" action="https://formsubmit.co/luchonromero@gmail.com" method="POST">
+                <div class="contact-form-content">
+
+                    <div class="contact-inputs">
+                        <label>
+                            <input type="text" id="name" name="name" placeholder="Nombre">
+                        </label>
+                        <label>
+                            <input type="email" id="email" name="email" placeholder="Email">
+                        </label>
+                        <label>
+                            <textarea name="textarea" id="textarea" cols="30" rows="6"
+                                placeholder="Escribe tu mensaje acá"></textarea>
+                        </label>
+                    </div>
+                    <button type="submit" value="Enviar"> ENVIAR </button>
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
