agregado de footer y correcciones de colores y estilos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>          
         </div>
         <div class="footer">
-    
+            <div class="includes" include-html="secciones/footer.html"></div>
         </div>
     </div>
 
