--- a/secciones/contact.html
+++ b/secciones/contact.html
@@ -8,14 +8,14 @@
                     redes sociales para estar al tanto de las ultimas novedades y proyectos</p>
             </div>
             <div class="contact-redes">
-                <a href="">
+                <a href="https://www.linkedin.com/in/luciano-nicolas-romero-silva-617837220/">
                     <img src="icons/linkedin.png" alt="icon linkedin">
                 </a>
-                <a href="">
+                <a href="https://github.com/Luchoromero29?tab=repositories">
                     <img src="icons/github.png" alt="icon github">
                 </a>
-                <a href="">
-                    <img src="/icons/instagram.png" alt="icon instagram">
+                <a href="https://www.instagram.com/luchoromero._/?next=%2F">
+                    <img src="icons/instagram.png" alt="icon instagram">
                 </a>
                 <a id="download" class="contact-download" href="pdf/CV LUCIANO 2023.pdf" download="CV Luciano Romero">
                     Download CV
