--- a/secciones/navbar.html
+++ b/secciones/navbar.html
@@ -1,6 +1,6 @@
 
 <div class="logo col-xs-2 col-s-2 col-m-2 col-l-2 col-xl-2">
-    <img src="imagenes/logoBlanco.png" >
+    <img src="imagenes/logoBlanco-sinMarca-removebg-preview.png" >
 </div>
 
 <div class="index col-xs-8 col-s-8 col-m-8 col-l-8 col-xl-8">
