correccion de Textos, agregado de proyecto y actualizacion de los mismos

--- a/secciones/aboutme.html
+++ b/secciones/aboutme.html
@@ -1,5 +1,5 @@
 <div class="title-presentation col-m-8 col-l-8 col-xl-8">
-    <p>Hi, im LUCIANO <br> WELCOME to my portfolio</p>
+    <p>Hi, I'm LUCIANO <br> WELCOME to my portfolio</p>
 </div>
 
 <div class="photo-computer col-m-4 col-l-4 col-xl-4 col-s-12 col-xs-12">
@@ -11,7 +11,7 @@
 <div id="presentation" class="presentation col-l-12 col-xl-12">
     <div class="etiqueta col-xl-10 col-l-10 col-m-10 col-s-10 col-xs-10 ">
 
-        <p class="col-xl-8 col-l-8 col-m-8  col-s-12 col-xs-12" >I'm 21 and Since I was a child liked technology, learned about programming through my parents, and I started a Java
+        <p class="col-xl-8 col-l-8 col-m-8  col-s-12 col-xs-12" >I'm 21 and Since I was a child I liked technology, learned about programming through my parents, and started a Java
             FullStack developer course. When I learned HTML and CSS, decided to go deeper by complementing it with
             JavaScript</p>
         <img class="col-l-4 col-l-4 col-m-4 col-s-12 col-xs-12"   src="imagenes/foto-perfil.jpeg" alt="">
