--- a/secciones/projects.html
+++ b/secciones/projects.html
@@ -35,16 +35,31 @@
 
             <div id="projects-model" class="projects-model col-xl-4 col-l-4 col-m-6 col-s-6 col-xs-12">
                 <h1>Memotest</h1>
-                <img src="imagenes/projects-memotest.png" alt="preview-project">
+                <img src="imagenes/projects-memotest.jpeg" alt="preview-project">
                 <div class="projects-tecnologias">
                     <p class="javascript">JavaScript</p>
                     <p class="css">CSS</p>
                     <p class="html">HTML</p>
                 </div>
-                <p>Memory game with timer and correct answers, the first and oldest project on this list of projects</p>
+                <p>This project is the reversion of a previous one, optimize the code, add local storage and a local ranking system, as well as image optimization</p>
                 <div class="projects-links">
-                    <a href="https://luchoromero29.github.io/Memotest.-/">DEPLOY </a>
-                    <a href="https://github.com/Luchoromero29/Memotest.-">GITHUB </a>
+                    <a href="https://luchoromero29.github.io/MemotestFinal/">DEPLOY </a>
+                    <a href="https://github.com/Luchoromero29/MemotestFinal">GITHUB </a>
+                </div>
+            </div>
+
+            <div id="projects-model" class="projects-model col-xl-4 col-l-4 col-m-6 col-s-6 col-xs-12">
+                <h1>E-Commerce</h1>
+                <img src="imagenes/projects-ecomerce.png" alt="preview-project">
+                <div class="projects-tecnologias">
+                    <p class="javascript">JavaScript</p>
+                    <p class="css">CSS</p>
+                    <p class="html">HTML</p>
+                </div>
+                <p>The project is a pre-delivery of a course, it has a search filtering system, cart and local storage, as well as the implementation of a library</p>
+                <div class="projects-links">
+                    <a href="https://luchoromero29.github.io/entrega3CoderHouse/">DEPLOY </a>
+                    <a href="https://github.com/Luchoromero29/entrega3CoderHouse">GITHUB </a>
                 </div>
             </div>
 
