--- a/secciones/skills.html
+++ b/secciones/skills.html
@@ -1,7 +1,7 @@
 <div class="skills-fondo col-xl-12 col-l-12 col-m-12 col-s-12 col-xs-12">
 
     <section class="skills-container col-xl-10 col-l-10 col-m-10 col-s-10 col-xs-10">
-        <p>HABILITIES</p>
+        <p>SKILLS</p>
         <div id="grid" class="grid-habilities col-xl-12 col-l-12 col-m-12 col-s-12 col-xs-12">
            
             <div class="skill-icon">
