--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Rubik&family=Signika+Negative:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imagenes/favicon.jpeg" type="image/x-icon">
     <title>Portfolio - Luciano Romero </title>
 </head>
 <body>
